--- a/demomodule/webapp/view/Home.view.xml
+++ b/demomodule/webapp/view/Home.view.xml
@@ -2,6 +2,9 @@
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+        <Text id= "rohan" text = "Rohan"></Text>
+        <Text id= "rohan1" text = " Kumar Singh"></Text>
+        </content>
     </Page>
 </mvc:View>
